<resources>
    <string name="app_name">Er. Nexus</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="sign_up_as_student">Sign up as a student</string>
    <string name="sign_up_as_faculty">Sign up as a faculty</string>
    <string name="enrollment_number">Enrollment Number</string>
    <string name="user_name">User Name:</string>
    <string name="full_name">Full Name :</string>
    <string name="password_sign_up">Password :</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="email_id">Email Id:</string>
    <string name="date_of_birth">Date Of Birth:</string>
    <string name="submit">Submit</string>
    <string name="title_activity_user_profile_home_activity">UserProfileHomeActivty</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="attendance_tab">Attendance</string>
    <string name="assignments_tab">Assignments</string>
    <string name="newsfeed_tab">NewsFeed</string>
    <string name="achievements_tab">Achievements</string>
    <string name="scan_attendance">Scan Attendance</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="erNo">Enrollment Number</string>
    <string name="attendance_cooldown_text">Attendance Button is in cooldown for 1 min</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="achievements_description_editText">Description</string>
    <string name="are_you_a_winner">Are you a winner?</string>
    <string name="sign_up">Sign Up</string>
    <string name="faculty_code">Faculty Code</string>
    <string name="faculty_name">Name</string>
    <string name="subect_code">Subject Code</string>
    <string-array name="sort_attendance_by">
        <item>Sort By</item>
        <item>Subject Code</item>
        <item>Faculty Code</item>
        <item>Date</item>
    </string-array>

    <string-array name="type_of_activity">
        <item>A1 - Bridge Course</item>
        <item>A2 - Technical/Research Skills</item>
        <item>A3 - Sports/Cultural</item>
        <item>A4 - Community Outreach/Social initiatives</item>
        <item>A5 - Innovation/IPR/Entrepreneurship</item>
        <item>A6 - Leadership/Management</item>
    </string-array>

    <string-array name="bridge_course_sub_activity">
        <item>Sub-Types</item>
        <item>Village Visit</item>
        <item>Learning Engineering</item>
        <item>History of Science and Technology</item>
        <item>Life Skills</item>
    </string-array>

    <string-array name="technical_research_skills_sub_activities">
        <item>Sub-Types</item>
        <item>Group Discussion</item>
        <item>Technical Quiz</item>
        <item>Aptitude/Reasoning</item>
        <item>Tech-Fest</item>
        <item>Workshop</item>
        <item>Short term training program(STTP)</item>
        <item>Massive open online courses(MOOC)</item>
        <item>Student Skill development</item>
        <item>Paper Presentation</item>
        <item>Poster</item>
        <item>Training/Internship/Professional Certification</item>
        <item>Project (Non-Curricular)</item>
        <item>Industrial/Exhibition Visit</item>
        <item>Consultancy Projects</item>
    </string-array>

    <string-array name="sports_cultural_sub_activities">
        <item>Sub-Types</item>
        <item>Sports</item>
        <item>Cultural</item>
    </string-array>

    <string-array name="community_outreach_social_initiatives_sub_activities">
        <item>Sub-Types</item>
        <item>Community Service and Allied Activities (Two Day)</item>
        <item>Community Service and Allied Activities (One week)</item>
        <item>Community Service and Allied Activities (One month)</item>
        <item>Community Service and Allied Activities (One semester)</item>
        <item>Community Service and Allied Activities (One academic year)</item>
        <item>NSS/NCC (One year Completion)</item>
    </string-array>

    <string-array name="innovation_ipr_entrepreneurship_sub_activities">
        <item>Sub-Types</item>
        <item>High Customer Review for Creative Products</item>
        <item>Awards/Recognitions for Products</item>
        <item>Legally Registered a Start-up Company</item>
        <item>Filed a patent</item>
        <item>Published a patent</item>
        <item>Completed Prototype Development</item>
        <item>Generated Significant Revenue/Profits</item>
        <item>Patent Approved</item>
        <item>Attracted External Funding (Investor)</item>
        <item>Other Major Industry Specific Achievements</item>
        <item>User/Industry Implementing the Innovation developed by Student</item>
        <item>Significant Value Addition / Augmentation of Grassroots / Social Innovation</item>
    </string-array>

    <string-array name="leadership_management_sub_activities">
        <item>Sub-Types</item>
        <item>Hobby Club Activities / ECell / Placement Cell / Media Club, etc.</item>
        <item>Festival (Technical / Business / Others) Events</item>
        <item>Professional Societies(ASME / ACM / IEEE / SAE, etc.)</item>
        <item>Special Initiatives</item>
        <item>GTU Innovation Club / S4 Extension Centre</item>
        <item>GIC Associates</item>
    </string-array>

    <string-array name="participation_level">
        <item>Volunteer</item>
        <item>Sub-Coordinator</item>
        <item>Core-Coordinator</item>
    </string-array>

    <string-array name="competition_level">
        <item>College</item>
        <item>Zonal</item>
        <item>State</item>
        <item>National</item>
        <item>International</item>
    </string-array>
</resources>
